<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.temwa.mynurse.AddProfileActivity" >
    
     <Button
         android:id="@+id/btAddProfile"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
         android:layout_below="@+id/etDOB"
         android:layout_marginTop="16dp"
         android:onClick="save"
         android:text="@string/save" />

    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/profile" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAddProfile"
        android:layout_alignStart="@+id/btAddProfile"
        android:layout_below="@+id/tvProfile"
        android:layout_marginTop="10dp"
        android:text="@string/fname" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAddProfile"
        android:layout_alignStart="@+id/btAddProfile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" 
        android:layout_below="@+id/tvName"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>
    
    <RadioGroup
        android:id="@+id/sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvGender"
        android:layout_alignStart="@+id/tvGender"
        android:layout_below="@+id/tvGender"
        android:baselineAligned="true"
        android:orientation="horizontal" >

    <RadioButton
        android:id="@+id/rbM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="sexClick"
        android:text="@string/male" />

    <RadioButton
        android:id="@+id/rbF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:onClick="sexClick"
        android:text="@string/female" />

     </RadioGroup>

    <TextView
        android:id="@+id/tvGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_alignStart="@+id/etName"
        android:layout_below="@+id/etlname"
        android:layout_marginTop="10dp"
        android:text="@string/gender" />

    <TextView
        android:id="@+id/tvDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAddProfile"
        android:layout_alignStart="@+id/btAddProfile"
        android:layout_below="@+id/sex"
        android:layout_marginTop="10dp"
        android:text="@string/dob" />

    <EditText
        android:id="@+id/etDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAddProfile"
        android:layout_alignStart="@+id/btAddProfile"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/tvDOB"
        android:layout_marginTop="10dp"
        android:inputType="none"
        android:clickable="true"
        android:focusable="false"
        android:ems="10"       
        android:onClick="setDate"  />

    <Button
        android:id="@+id/btClear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btAddProfile"
        android:layout_below="@+id/btAddProfile"
        android:layout_marginTop="16dp"
        android:onClick="clear"
        android:text="@string/clear" />

    <Button
        android:id="@+id/btViewProfile"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btClear"
        android:layout_alignParentBottom="true"
        android:onClick="veiwProfile"
        android:text="@string/vprofile" />

    <TextView
        android:id="@+id/tvlname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etName"
        android:layout_below="@+id/etName"
        android:layout_marginLeft="8dp"
        android:text="@string/lname" />
    
    <EditText
        android:id="@+id/etlname"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_below="@+id/tvlname"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etSex"
        android:layout_width="1dp"
        android:layout_height="1dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10" />

</RelativeLayout>
